More gifs and stuff

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <p>Next up is expanding scenario coverage and tightening runtime metrics so we can compare changes run-to-run.</p>
 
           <figure>
+            <img class="media-img" src="content/sim.gif" alt="Sim Gif" />
+          </figure>
+          <figure>
             <img class="media-img" src="content/sim_screenshot_1.png" alt="Operation Running" />
           </figure>
           <figure>
