--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Diff Bio</title>
   <meta name="description" content="Robotics, Software, Science Development" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
 </head>
 
 <body>
