Adds header to all posts section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 
       <div class="layout">
         <main class="feed" id="feed">
+          <div class="section-head">
+            <div>
+              <h2>All Posts</h2>
+            </div>
+          </div>
           <article class="post timeline-card" id="post-lab-sim" data-tags="lab-automation" data-date="Jan 15, 2026">
             <div class="timeline-meta">
               <span class="timeline-dot"></span>
